Shortener overflow fixed Add error label and styles 1/2

--- a/styles/style.css
+++ b/styles/style.css
@@ -225,6 +225,14 @@ main {
 }
 
 /* ----- Form ---- */
+.validate{
+    font-family: 'Poppins', sans-serif !important;
+    font-style: italic;
+}
+.error{
+    border-color:red;
+    color:red;
+}
 
 
 input, button {
